--- a/quickstart/backend/package.json
+++ b/quickstart/backend/package.json
@@ -8,6 +8,8 @@
     "start": "tsx --env-file=.env --watch  src/index.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2"
   },
