--- a/quickstart/frontend/package.json
+++ b/quickstart/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-query-devtools": "^5.69.0",
     "react": "^19.0.0",
@@ -26,7 +27,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
