--- a/quickstart/backend/package.json
+++ b/quickstart/backend/package.json
@@ -1,11 +1,13 @@
 {
   "name": "quickstart-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "tsx --env-file=.env --watch  src/index.ts"
+    "dev": "tsx --env-file=.env --watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
@@ -14,6 +16,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
